Categorise blog posts and filter them on index page

--- a/_posts/2014-06-29-and-relax.md
+++ b/_posts/2014-06-29-and-relax.md
@@ -24,8 +24,7 @@ tz_gallery_randomize:
   - 'false'
 tz_gallery_captions:
   - 'true'
-categories:
-  - Blog
+categories: blog
 format: audio
 ---
 Ideas can come from anywhere but sometimes the best ones appear when you are completely relaxed and have a quiet mind.
