--- a/_posts/2014-07-12-20syl-kodama.md
+++ b/_posts/2014-07-12-20syl-kodama.md
@@ -21,8 +21,7 @@ tz_gallery_captions:
   - 'true'
 tz_video_embed:
   - http://vimeo.com/98417189
-categories:
-  - Blog
+categories: blog
 format: video
 ---
 I hand't heard of 20SYL until I came across this totally awesome video which I think goes to show what a great bit of viral media can do.
