--- a/_posts/2016-09-02-hotdesk-1.md
+++ b/_posts/2016-09-02-hotdesk-1.md
@@ -22,9 +22,7 @@ tz_gallery_randomize:
 tz_gallery_captions:
   - 'true'
 image: /wp-content/uploads/2016/09/Hotdesk_small.jpg
-categories:
-  - Blog
-  - Hotdesk
+categories: blog
 ---
 Having a side-project like music production or a startup means finding time and space to get lots of extra stuff done, often around a full time job. If you happen to be a parent like me then this is even more essential. What was once a peaceful abode is now as quiet as the front row of a One Direction concert.
 
